--- a/Frame Project.html
+++ b/Frame Project.html
@@ -4,9 +4,8 @@
         <title>
             Emir first project
         </title>
-        <link rel="shortcut icon" href="assests/img/85678 - Copy.png" type="image/x-icon">
+        <link rel="shortcut icon" href="src/img/ran-icon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="assests/Font Awesome/web/css/all.css">
     </head>
 
     <body>
@@ -84,7 +83,7 @@
                 </div>
                 <div class="features_list">
                     <div class="img_box">
-                        <img src="assests/img/img_showcase_1.jpg" alt="">
+                        <img src="src/img/img_showcase_1.jpg" alt="">
                     </div>
                     <div class="feature_info">
                         <span>Big Benefits for <br> Small Business</span>
@@ -117,12 +116,12 @@
                         </p>
                     </div>
                     <div class="img_box">
-                        <img src="assests/img/img_showcase_2.jpg" alt="">
+                        <img src="src/img/img_showcase_2.jpg" alt="">
                     </div>
                 </div>
                 <div class="features_list">
                     <div class="img_box">
-                        <img src="assests/img/img_showcase_1.jpg" alt="">
+                        <img src="src/img/img_showcase_1.jpg" alt="">
                     </div>
                     <div class="feature_info">
                         <span>All in One <br> Place</span>
@@ -219,7 +218,7 @@
             <div class="sugestion_box">
                 <div class="sugestions">
                     <div class="sug">
-                        <img src="assests/img/person_1.jpg" alt="">
+                        <img src="src/img/person_1.jpg" alt="">
                         <div class="score">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -231,7 +230,7 @@
                         <span class="user_name_suggestion">— Garry Alexander</span>
                     </div>
                     <div class="sug">
-                        <img src="assests/img/person_2.jpg" alt="">
+                        <img src="src/img/person_2.jpg" alt="">
                         <div class="score">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -243,7 +242,7 @@
                         <span class="user_name_suggestion">— James Robertson</span>
                     </div>
                     <div class="sug">
-                        <img src="assests/img/person_3.jpg" alt="">
+                        <img src="src/img/person_3.jpg" alt="">
                         <div class="score">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -255,7 +254,7 @@
                         <span class="user_name_suggestion">— Ben Goodrich</span>
                     </div>
                     <div class="sug">
-                        <img src="assests/img/person_4.jpg" alt="">
+                        <img src="src/img/person_4.jpg" alt="">
                         <div class="score">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -267,7 +266,7 @@
                         <span class="user_name_suggestion">— Kip Hugh</span>
                     </div>
                     <div class="sug">
-                        <img src="assests/img/person_2.jpg" alt="">
+                        <img src="src/img/person_2.jpg" alt="">
                         <div class="score">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -279,7 +278,7 @@
                         <span class="user_name_suggestion">— James Robertson</span>
                     </div>
                     <div class="sug">
-                        <img src="assests/img/person_3.jpg" alt="">
+                        <img src="src/img/person_3.jpg" alt="">
                         <div class="score">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -303,7 +302,7 @@
                 <a class="get_product" href="">Get It Now</a>
             </div>
             <div class="laptop_image">
-                <img src="assests/img/laptop_1.jpg" alt="">
+                <img src="src/img/laptop_1.jpg" alt="">
             </div>
             <div class="availibility_box">
                 <div class="info_box">
